--- a/exp_criatica.css
+++ b/exp_criatica.css
@@ -6,7 +6,7 @@
     }
 
     header {
-      background-image:url(imagens/restaurante.jpg) #1e293b;
+      background-image:url(imagens/restaurante.jpg);
       color: #fff;
       padding: 2rem;
       text-align: center;
