--- a/exp_criatica.css
+++ b/exp_criatica.css
@@ -6,11 +6,15 @@
     }
 
     header {
-      background-image:url(imagens/restaurante.jpg);
-      color: #fff;
-      padding: 2rem;
-      text-align: center;
-    }
+    background-image: url(imagens/restaurante.jpg);
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-position: center; 
+    color: #fff;
+    padding: 2rem;
+    text-align: center;
+    height: 200px;
+}
 
     h1 {
       margin: 0 0 0.5rem;
