--- a/exp_criatica.css
+++ b/exp_criatica.css
@@ -5,16 +5,32 @@
       color: #333;
     }
 
-    header {
+   header {
+    position: relative; 
     background-image: url(imagens/restaurante.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    filter: brightness(50%); 
     color: #fff;
     padding: 2rem;
     text-align: center;
     height: 200px;
+}
+
+header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+header h1 {
+    position: relative; 
+    z-index: 2;
 }
 
     h1 {
