--- a/exp_criatica.css
+++ b/exp_criatica.css
@@ -5,7 +5,7 @@
       color: #333;
     }
 
-   header {
+header {
     position: relative; 
     background-image: url(imagens/restaurante.jpg);
     background-size: cover;
@@ -24,8 +24,14 @@ header::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.5); /* Sobreposição escura */
+    z-index: 1; /* Camada abaixo do texto */
+}
+
+header h1 {
+    position: relative; /* Garante que o texto fique acima da sobreposição */
+    z-index: 2; /* Camada acima do ::before */
+    margin: 0;
 }
 
 header h1 {
