--- a/exp_criatica.css
+++ b/exp_criatica.css
@@ -5,39 +5,12 @@
       color: #333;
     }
 
-header {
-    position: relative; 
-    background-image: url(imagens/restaurante.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    color: #fff;
-    padding: 2rem;
-    text-align: center;
-    height: 200px;
-}
-
-header::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Sobreposição escura */
-    z-index: 1; /* Camada abaixo do texto */
-}
-
-header h1 {
-    position: relative; /* Garante que o texto fique acima da sobreposição */
-    z-index: 2; /* Camada acima do ::before */
-    margin: 0;
-}
-
-header h1 {
-    position: relative; 
-    z-index: 2;
-}
+    header {
+      background-color: #1e293b;
+      color: #fff;
+      padding: 2rem;
+      text-align: center;
+    }
 
     h1 {
       margin: 0 0 0.5rem;
@@ -62,7 +35,7 @@ header h1 {
     }
 
     .restaurant h2 {
-      background: #4b1d1d;
+      background: #3b82f6;
       color: white;
       margin: 0;
       padding: 1rem;
