--- a/exp_criatica.css
+++ b/exp_criatica.css
@@ -6,7 +6,7 @@
     }
 
     header {
-      background-color: #1e293b;
+      background-color: #4b1d1d;
       color: #fff;
       padding: 2rem;
       text-align: center;
