--- a/exp_criatica.css
+++ b/exp_criatica.css
@@ -5,13 +5,48 @@
       color: #333;
     }
 
-    header {
-      background-color: #4b1d1d;
-      color: #fff;
-      padding: 2rem;
-      text-align: center;
-    }
+   header {
+    position: relative; 
+    background-image: url('imagens/restaurante.jpg'); 
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-position: center;
+    background-attachment: fixed; 
+    color: #fff; 
+    padding: 2rem;
+    text-align: center;
+    height: 300px; 
+    display: flex; /* Adiciona um contêiner flexível */
+    flex-direction: column; /* Alinha os itens verticalmente */
+    justify-content: center; /* Centraliza verticalmente */
+    align-items: center; /* Centraliza horizontalmente */
+}
+header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1; 
+}
 
+header h1, header p {
+    position: relative; 
+    z-index: 2; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); 
+}
+
+header h1 {
+    font-size: 2.5rem; 
+    margin: 0 0 0.5rem;
+}
+
+header p {
+    font-size: 1.2rem; 
+    margin: 0;
+}
     h1 {
       margin: 0 0 0.5rem;
     }
