--- a/exp_criatica.css
+++ b/exp_criatica.css
@@ -16,10 +16,10 @@
     padding: 2rem;
     text-align: center;
     height: 300px; 
-    display: flex; /* Adiciona um contêiner flexível */
-    flex-direction: column; /* Alinha os itens verticalmente */
-    justify-content: center; /* Centraliza verticalmente */
-    align-items: center; /* Centraliza horizontalmente */
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
 }
 header::before {
     content: '';
@@ -108,3 +108,53 @@ header p {
       padding: 1rem;
       margin-top: 2rem;
     }
+    
+.carousel {
+    position: relative;
+    max-width: 100%;
+    margin: 2rem auto;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.carousel-images {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.carousel-images img {
+    width: 100%;
+    flex-shrink: 0;
+}
+
+.carousel-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.carousel-button.prev {
+    left: 10px;
+}
+
+.carousel-button.next {
+    right: 10px;
+}
+
+.carousel-button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+.carousel-images img {
+    width: 90%; /* Ajusta a largura para ocupar todo o espaço do carrossel */
+    max-height: 300px; /* Define uma altura máxima para as imagens */
+    max-width: 50%; /* Garante que a imagem não ultrapasse a largura do carrossel */
+    height: auto; /* Mantém a proporção da imagem */
+    object-fit: cover; /* Garante que a imagem seja cortada proporcionalmente para caber */
+}
