--- a/exp_criatica.css
+++ b/exp_criatica.css
@@ -131,15 +131,7 @@ header p {
 }
 
 .carousel-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    z-index: 2;
+  display: none;
 }
 
 .carousel-button.prev {
