--- a/exp_criatica.css
+++ b/exp_criatica.css
@@ -10,7 +10,7 @@ body {
 
    header {
     position: relative; 
-    background-image: url('imagens/restaurante.jpg'); 
+    background-image: url('imagens/restaurante\ \(1\).jpg'); 
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center;
