--- a/css.Restaurantes.css
+++ b/css.Restaurantes.css
@@ -10,7 +10,7 @@ body {
 
    header {
     position: relative; 
-    background-image: url('Restaurantes.imagens/restaurante fundo.jpg'); 
+    background-image: url('imagens/restaurante fundo.jpg'); 
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center;
